--- a/src/components/All Courses/AllCourses.css
+++ b/src/components/All Courses/AllCourses.css
@@ -98,9 +98,9 @@
   border-color: var(--firstColor) !important;
 }
 
-.course-section {
-  margin: 50px !important;
-}
+/* .course-section {
+  background: #000;
+} */
 
 .bread-crumb {
   background-image: url("../../Assets/coursebreadcramb.png");
