--- a/src/components/All Courses/AllCourses.css
+++ b/src/components/All Courses/AllCourses.css
@@ -1,7 +1,7 @@
 .AllCoursesHeader {
-  height: 60vh;
+  height: 50vh;
   /* text-align: center; */
-  background-image: url("../../Assets/courses-bg.png");
+  background-image: url("../../Assets/bgg.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 80% left;
@@ -10,7 +10,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding-top: 100px;
+  padding-top: 55px;
 }
 
 .AllCoursesHeader .AllCoursesTitle {
@@ -125,10 +125,11 @@
 
 .CourseInfoMainData {
   width: 100% !important;
-  margin-top: 92px !important;
+  margin-top: 60px !important;
   background-image: url(../../Assets/bgg.png);
   background-size: cover !important;
   color: aliceblue;
+  padding-bottom: 20px !important;
 }
 
 .CourseInfoMainData_header {
@@ -157,6 +158,7 @@
   display: flex;
   align-items: center;
   padding-bottom: 10px !important;
+  margin-left: 45px !important;
 }
 
 .language-icon {
@@ -256,9 +258,15 @@ select {
   font-size: 12px !important;
   padding: 8px 4px !important;
   margin-bottom: 20px;
-  font-weight: 600 !important;
+  font-weight: 500 !important;
   color: aliceblue;
   width: 150px !important;
+  border-radius: 7px;
+}
+
+.instructor_profile a {
+  width: 150px !important;
+  line-height: 25px !important;
 }
 
 .instructor_social-icons {
@@ -275,12 +283,12 @@ select {
 
 .instructor_social-icons a {
   display: block;
-  width: 30px;
+  width: 40px;
   height: 30px;
   border-radius: 50%;
   text-align: center;
   line-height: 30px;
-  font-size: 18px;
+  font-size: 15px;
   color: #fff;
 }
 
@@ -351,7 +359,7 @@ select {
 
 .info-tag {
   display: flex !important;
-  margin-right: 25px !important;
+  margin-left: 40px !important;
   color: var(--secondColor);
   font-size: 18px !important;
 }
@@ -431,6 +439,8 @@ select {
 .side-video-content {
   flex: 3;
   background-color: rgb(252, 252, 252);
+  margin-top: 70px !important;
+  padding-bottom: 56px !important;
 }
 
 .course-sidebar-head {
@@ -476,7 +486,8 @@ select {
   font-weight: 700;
   font-size: 35px;
 }
-.course-title span{
+
+.course-title span {
   color: var(--firstColor);
 }
 
