--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -2,13 +2,14 @@
   font-size: 0.8rem;
   width: 900px !important;
   height: 500px !important;
-  margin-top: 200px !important ;
+  margin-top: 200px !important;
 }
 
 .custom-table th,
 .custom-table td {
   padding: 0.5rem 1rem;
 }
+
 .custom-table td {
   background-color: white !important;
 }
@@ -23,35 +24,42 @@
   border-radius: 50% !important;
   line-height: 50px;
 }
-.table-striped > tbody > tr:nth-child(odd) > td,
-.table-striped > tbody > tr:nth-child(odd) > th {
+
+.table-striped>tbody>tr:nth-child(odd)>td,
+.table-striped>tbody>tr:nth-child(odd)>th {
   background-color: #fbfeff !important;
 }
-.dshh {
+
+.dash {
   background-image: url(../../Assets/header-bg.jpg);
-  height: 150vh !important;
 }
+
 
 .delete-btn {
   background-color: rgb(189, 4, 4) !important;
 }
+
 .delete-btn:hover {
   opacity: 0.8 !important;
 }
+
 .tablehead {
   color: var(--secondColor) !important;
   letter-spacing: 3px !important;
 }
+
 .table-id,
 .table-email,
 .table-type {
   font-size: 17px !important;
 }
+
 .table-name {
   text-align: center;
   font-size: 18px !important;
   letter-spacing: 0.5px !important;
 }
+
 .dashboard-search {
   margin: 30px !important;
   height: 40px !important;
@@ -61,6 +69,7 @@
 .Table {
   outline: none !important;
 }
+
 .add-instructor-btn,
 .add-course-btn,
 .add-quiz-btn {
@@ -68,75 +77,94 @@
 
   margin: 30px !important;
 }
+
 .add-instructor-btn:hover,
 .add-course-btn:hover,
 .add-quiz-btn:hover {
   opacity: 0.9;
 }
+
 .instuctor-img {
   width: 90px !important;
   height: 120px !important;
 }
+
 .update-btn {
   background-color: var(--secondColor) !important;
 }
+
 .update-btn:hover {
-  background-color: #30598c !important ;
+  background-color: #30598c !important;
 }
+
 .quiz-edit-btn {
   background-color: var(--secondColor) !important;
 
   margin-right: 90px !important;
 }
+
 .dash-model {
   margin-top: 30px !important;
 }
+
 .save-model-btn,
 .save-btn {
-  background-color: #30598c !important ;
+  background-color: #30598c !important;
 }
+
 .save-model-btn:hover,
 .save-btn:hover {
   background-color: var(--secondColor) !important;
 }
+
 .close-model-btn,
 .close-btn {
-  background-color: #029e99 !important ;
+  background-color: #029e99 !important;
 }
+
 .close-model-btn:hover,
 .close-btn:hover {
   background-color: var(--firstColor) !important;
 }
+
 .body-form-group {
   margin-top: -90px !important;
 }
+
 .modal-data {
   font-size: 18px !important;
   margin-top: 10px !important;
 }
+
 .input-modal {
   height: 40px !important;
   width: 420px !important;
   position: relative;
 }
+
 .submit-btn-modal {
   background-color: var(--secondColor) !important;
 
   margin-left: 140px !important;
   margin-top: 40px !important;
 }
+
 .save-btn {
   background-color: var(--secondColor) !important;
 }
+
 .add-question-btn {
   background-color: var(--secondColor) !important;
 
   margin-top: 60px !important;
   margin-left: 150px !important;
 }
-.add-question-btn:hover,.save-changes-btn:hover{
+
+.add-question-btn:hover,
+.save-changes-btn:hover {
   opacity: 0.9;
 }
+
 .Delete-Answer-btn {
   background-color: rgb(189, 4, 4) !important;
 
@@ -145,44 +173,66 @@
   margin-left: 360px !important;
   margin-top: -40px !important;
 }
+
 .Delete-Answer-btn:hover {
   opacity: 0.8;
 }
+
 .Add-Answer-btn {
   background-color: rgb(24, 116, 24) !important;
-
-  padding: 0px 20px !important;
   position: absolute;
-  margin-left: 360px !important;
-  margin-top: -55px !important;
+  left: 180px !important;
+  margin-bottom: 100px !important;
 }
+
 .Add-Answer-btn:hover {
   opacity: 0.8;
 }
+
 .save-changes-btn {
   background-color: var(--secondColor) !important;
 }
+
 .close-btn {
   margin-right: 240px !important;
 }
+
 .modal-title {
   text-align: center !important;
   color: var(--secondColor) !important;
 }
+
 .interview {
   background-color: var(--secondColor) !important;
 }
-.dash-header{
+
+.dash-header {
   font-size: 30px !important;
 }
+
+.dash-header1{
+  font-size: 25px !important;
+}
 .select-alert {
-  background-color: #cde3cd !important;
+  background-color: rgb(209, 231, 221) !important;
 }
-select option{
-  color: var(--secondColor) !important; 
-}
-select option:nth-child(1){
+
+select option {
   color: var(--secondColor) !important;
+}
 
+select option:nth-child(1) {
+  color: var(--secondColor) !important;
+}
 
+.dash-side {
+  position: fixed;
+}
+
+.dashAside {
+  margin-top: -20px !important;
+}
+
+.dashcategory .form-check-label {
+  color: var(--secondColor) !important;
 }
