--- a/src/components/Mylearning/learning.css
+++ b/src/components/Mylearning/learning.css
@@ -3,7 +3,7 @@
   background-size: cover;
   background-position: center;
   height: 260px;
-  margin-top: 73px !important;
+  margin-top: 65px !important;
   text-align: center;
   padding-top: 80px !important;
   width: 100%;
@@ -79,4 +79,13 @@
 .learningContainer .searchDiv button:hover {
   background-color: var(--secondColor) !important;
   letter-spacing: 0px !important;
+}
+
+.learningNOCourses{
+  text-align: center; 
+  margin-left: -100px !important;
+  margin-top: 120px !important;
+  font-size: 35px;
+  font-weight: 600;
+  color: var(--firstColor);
 }
